aptsh (0.0.8) unstable; urgency=low

  * Applied Martin Michlmayr's patch. Closes: #419321.
  * If SIGINT is received while executing an internal command now,
    only the command is stopped, not the Aptsh.

 -- Marcin Wrochniak <wrochniak@gmail.com>  Sat, 26 May 2007 17:07:07 +0200

aptsh (0.0.7) unstable; urgency=low

  * Fixed bug in printer.c. May had caused strange behaviour of orphans-*
    commands on some architectures (ie. ppc). Closes: #383875.
  * Fixed bug in rls and ls commands - if given argument matched files in
    current directory (wildcard), in some shells names of these files were
    used instead of typed text.
  * Aptsh can be run with commands as arguments, this will work now:
    aptsh remove wajig
  * Fixed many minor bugs, added many minor features.
  * Done many internal improvements, the code seems to be clean now.

 -- Marcin Wrochniak <wrochniak@gmail.com>  Mon,  9 Apr 2007 14:55:27 +0200

aptsh (0.0.6) unstable; urgency=low

  * Fixed *.deb completion for dpkg --install command.
  * Fixed bug affecting --execute and commands that require initialization of
    libapt-pkg.
  * "orphans" and "orphans-all" are now pipeable.
  * Rewritten configuration file parser. Closes: #356770.
  * Fixed bashism in debian/rules. Closes: #374444.
  * Folded HOWTO. Closes: #344624. 

 -- Marcin Wrochniak <wrochniak@gmail.com>  Wed, 21 Jun 2006 10:22:50 +0200

aptsh (0.0.5) unstable; urgency=low

  * Aptsh used to crash when line was NULL (now exits). Closes: #333550.
  * Fixed PS1 in default configuration file which had been causing libreadline
    to mess up the screen when line was too long. Closes: #334130.
  * Added --help option and fixed bug with not recognized arguments.
    Closes: #335172.
  * Should build on 64-bit architectures now. Closes: #334109.
  * Changed libreadline4 to libreadline5. 

 -- Marcin Wrochniak <wrochniak@gmail.com>  Sat,  3 Dec 2005 11:01:35 +0100

aptsh (0.0.4) unstable; urgency=low

  * Initial Release.