@@ -3,8 +3,10 @@ aptsh (0.0.8) unstable; urgency=low
   * Applied Martin Michlmayr's patch. Closes: #419321.
   * If SIGINT is received while executing an internal command now,
     only the command is stopped, not the Aptsh.
+  * Accidentally removed code refreshing packages cache after 
+    installing/removing packages. Now fixed.
 
- -- Marcin Wrochniak <wrochniak@gmail.com>  Sat, 26 May 2007 17:07:07 +0200
+ -- Marcin Wrochniak <wrochniak@gmail.com>  Wed,  6 Jun 2007 11:03:54 +0200
 
 aptsh (0.0.7) unstable; urgency=low
 
